--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ body {
   justify-content: space-between;
   align-items: center;
   min-height: 100vh;
-  font-family: arial;
+  font-family: 'Inter', sans-serif;
   background: radial-gradient(var(--color-bg-inner), var(--color-bg-outer));
   position: relative;
   text-align: center;
